# fluxium-gateway

./: Dockerfile  LICENSE  README.md  base.json  docker-compose.yml  mongo-init.js  openapi.json  overrides.yaml  playground-1.mongodb.js  prometheus.yml  pyproject.toml  send.http  tempo.yaml
app/: config_store.py  context.py  handler_http.py  lifespan.py  logging_fast.py  main.py  metrics.py  rate_limit.py  telemetry.py
app/plugins/: api_key.py  base.py  cache.py  circuit_breaker.py  consumer_acl.py  correlation_id.py  cors.py  engine.py  errors.py  event_bridge.py  forward_auth.py  ip_restriction.py  jwt_auth.py  logging.py  oauth.py  rate_limit.py  request_size.py  retry.py  transformation.py  validation.py
tests/: conftest.py  test_api_key_plugin.py  test_cache_plugin.py  test_circuit_breaker_plugin.py  test_config_store.py  test_consumer_acl_plugin.py  test_correlation_id_plugin.py  test_cors_plugin.py  test_event_bridge_plugin.py  test_forward_auth_plugin.py  test_forward_call.py  test_forward_plugin_error_handling.py  test_ip_restriction_plugin.py  test_jwt_auth_plugin.py  test_logging_fast.py  test_logging_plugin.py  test_oauth_plugin.py  test_plugin_engine.py  test_rate_limit_plugin.py  test_request_size_plugin.py  test_retry_plugin.py  test_routes_endpoint.py  test_transformation_plugin.py  test_validation_plugin.py
